--- a/Sapodillas/index.html
+++ b/Sapodillas/index.html
@@ -28,7 +28,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <!-- 
     - preload images
@@ -87,12 +87,12 @@
 
       </div>
 
-      <a href="tel:+13012928367" class="topbar-item link">
+      <a href="tel:+2026783388" class="topbar-item link">
         <div class="icon">
           <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
         </div>
 
-        <span class="span">+13012928367</span>
+        <span class="span">+2026783388</span>
       </a>
 
       <div class="separator"></div>
@@ -202,10 +202,10 @@
         </address>
         
 
-          <p class="body-4 navbar-text">Monday: Coming Soon <!--Closed-->
-            <br> Tuesday-Friday: Coming Soon <!--11:00am - 6:00pm-->
-            <br> Satuday: Coming Soon <!--10:30am - 6:00pm-->
-            <br> Sunday: Coming Soon <!--Closed--> </p>
+          <p class="body-4 navbar-text">Monday: Closed 
+            <br> Tuesday-Thursday: 3PM-9PM
+            <br> Friday: 12PM-9PM 
+            <br> Saturday-Sunday: 12PM-8PM  </p>
             <br>
           <a href="mailto:info@sapodillas.com" class="body-4 sidebar-link">info@sapodillas.com</a>
 
@@ -214,7 +214,7 @@
           <p class="contact-label">Catering Requests</p>
 
           <a href="tel: Coming Soon" class="body-1 contact-number">
-             +13012928367 
+             +2026783388
           </a>
         </div>
 
@@ -630,9 +630,7 @@
 
 
 
-      <!-- 
-        - #FEATURES
-      -->
+      <!-- #FEATURES -->
 
       <section class="section features text-center" aria-label="features">
         <div class="container">
@@ -738,10 +736,10 @@
           <a href="Tel: Coming Soon" class="body-4 contact-link">Request ahead : Coming Soon</a>
 
           <p class="body-4">
-            <br> Monday: Coming Soon
-            <br> Tuesday-Friday: Coming Soon
-            <br> Satuday: Coming Soon
-            <br> Sunday: Coming Soon
+            <br> Monday: Closed
+            <br> Tuesday-Thursday: 3PM-9PM
+            <br> Friday: 12PM-9PM
+            <br> Saturday-Sunday: 12PM-8PM
           </p>
 
           <div class="wrapper">
@@ -851,7 +849,7 @@
   <!-- 
     - custom js link
   -->
-  <script src="script.js"></script>
+  <script src="./assets/js/script.js"></script>
 
   <!-- 
     - ionicon link
@@ -949,7 +947,7 @@
             <h1 class="abs-title">Every tree starts off as a seed..</h1>
             <br>
               <p>Family owned and operated, once you've visited Sapodilla's, you become part of the family.
-                 Sapodilla's is not just a restaurant; 
+                <!--<span style="color: #FF9D2E; font-weight: bold;">King of Spices</span>--> Sapodilla's is not just a restaurant; 
                 it's a welcoming home where every customer becomes part of the family. Their story reflects the power of determination, passion, and family values in achieving success and building a lasting legacy. Marva, Wilken Kitt and their family's journey from Guyana to the United States is a testament to their courage and entrepreneurial spirit. Their
                 decision to leave behind a successful garment factory business in pursuit of a new life in the U.S. is both inspiring and daring.</p>
                 <br>
@@ -991,10 +989,10 @@
         <a href="Tel: Coming Soon" class="body-4 contact-link">Request ahead : Coming Soon</a>
 
         <p class="body-4">
-          <br> Monday: Coming Soon
-          <br> Tuesday-Friday: Coming Soon
-          <br> Satuday: Coming Soon
-          <br> Sunday: Coming Soon
+          <br> Monday: Closed
+          <br> Tuesday-Thursday: 3PM-9PM
+          <br> Friday: 12PM-9PM
+          <br> Saturday-Sunday: 12PM-8PM
         </p>
 
         <div class="wrapper">
@@ -1089,7 +1087,7 @@
     <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
   </a>
 
-  <script src="script.js"></script> 
+  <script src="./assets/js/script.js"></script> 
 
 </section>
 
